--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -14,10 +14,17 @@
 # At least one of use_pretrained_model and train_model must be set to True.
 train_model = True
 use_pretrained_model = False
-pretrained_model_folder = ../trained_models/conll_2003_en
+pretrained_model_folder = ../trained_models/exobrain
 
 [dataset]
-dataset_text_folder = ../data/conll2003/en
+#dataset_text_folder = ../data/conll2003/en
+#dataset_text_folder = ../data/korean
+#dataset_text_folder = ../data/full_korean
+#dataset_text_folder = ../data/1_10_korean
+#dataset_text_folder = ../data/test
+dataset_text_folder = ../data/exobrain
+#dataset_text_folder = ../data/annie
+#dataset_text_folder = ../data/exobrain2
 
 # main_evaluation_mode should be either 'conll', 'bio', 'token', or 'binary'. ('conll' is entity-based)
 # It determines which metric to use for early stopping, displaying during training, and plotting F1-score vs. epoch.
@@ -35,20 +42,25 @@ character_embedding_dimension = 25
 character_lstm_hidden_state_dimension = 25
 
 # In order to use random initialization instead, set token_pretrained_embedding_filepath to empty string, as below:
-# token_pretrained_embedding_filepath =
-token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
-token_embedding_dimension = 100
+#token_pretrained_embedding_filepath =
+token_pretrained_embedding_filepath = ../data/morpheme_word_vectors/kor300.txt
+#token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
+# token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
+token_embedding_dimension = 300
 token_lstm_hidden_state_dimension = 100
 
 use_crf = True
+use_bnlstm = False
 
 [training]
 patience = 10
 maximum_number_of_epochs = 100
 
 # optimizer should be either 'sgd', 'adam', or 'adadelta'
-optimizer = sgd
-learning_rate = 0.005
+#optimizer = sgd
+#learning_rate = 0.005
+optimizer = adadelta
+learning_rate = 0.9
 # gradients will be clipped above |gradient_clipping_value| and below -|gradient_clipping_value|, if gradient_clipping_value is non-zero
 # (set to 0 to disable gradient clipping)
 gradient_clipping_value = 5.0
@@ -61,13 +73,13 @@ number_of_cpu_threads = 8
 
 # Upper bound on the number of GPU NeuroNER will use
 # If number_of_gpus > 0, you need to have installed tensorflow-gpu
-number_of_gpus = 0
+number_of_gpus = 1
 
 [advanced]
 experiment_name = test
 
 # tagging_format should be either 'bioes' or 'bio'
-tagging_format = bioes
+tagging_format = bio
 
 # tokenizer should be either 'spacy' or 'stanford'. The tokenizer is only used when the original data is provided only in BRAT format.
 # - 'spacy' refers to spaCy (https://spacy.io). To install spacy: pip install -U spacy
@@ -78,7 +90,8 @@ tagging_format = bioes
 #              To run Stanford CoreNLP, execute in the terminal: `java -mx4g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -port 9000 -timeout 50000`
 #              By default Stanford CoreNLP is in English. To use it in other languages, see: https://stanfordnlp.github.io/CoreNLP/human-languages.html
 #              Stanford CoreNLP 3.6.0 and higher requires Java 8. We have tested NeuroNER with Stanford CoreNLP 3.6.0.
-tokenizer = spacy
+#tokenizer = spacy
+tokenizer = korean
 # spacylanguage should be either 'de' (German), 'en' (English) or 'fr' (French). (https://spacy.io/docs/api/language-models)
 # To install the spaCy language: `python -m spacy.de.download`; or `python -m spacy.en.download`; or `python -m spacy.fr.download`
 spacylanguage = en
@@ -91,7 +104,7 @@ remap_unknown_tokens_to_unk = True
 load_only_pretrained_token_embeddings = False
 
 # If load_all_pretrained_token_embeddings is set to True, then all pretrained token embeddings will be loaded even for the tokens that do not appear in the dataset.
-load_all_pretrained_token_embeddings = False
+load_all_pretrained_token_embeddings = True
 
 # If check_for_lowercase is set to True, the lowercased version of each token will also be checked when loading the pretrained embeddings.
 # For example, if the token 'Boston' does not exist in the pretrained embeddings, then it is mapped to the embedding of its lowercased version 'boston',
@@ -122,5 +135,8 @@ reload_token_lstm = True
 reload_feedforward = True
 reload_crf = True
 
-parameters_filepath = ./parameters.ini
-
+#korean
+morpheme_tag_include = True
+space_tag_include = True
+batch_size = 64
+skip_data_compatibility = True
