JARVIS-292 queue를 이용한 자체 input pipeline 구축

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -19,10 +19,10 @@ pretrained_model_folder = ../trained_models/exobrain
 [dataset]
 #dataset_text_folder = ../data/conll2003/en
 #dataset_text_folder = ../data/korean
-#dataset_text_folder = ../data/full_korean
+dataset_text_folder = ../data/full_korean
 #dataset_text_folder = ../data/1_10_korean
 #dataset_text_folder = ../data/test
-dataset_text_folder = ../data/exobrain
+#dataset_text_folder = ../data/exobrain
 #dataset_text_folder = ../data/annie
 #dataset_text_folder = ../data/exobrain2
 
@@ -104,7 +104,7 @@ remap_unknown_tokens_to_unk = True
 load_only_pretrained_token_embeddings = False
 
 # If load_all_pretrained_token_embeddings is set to True, then all pretrained token embeddings will be loaded even for the tokens that do not appear in the dataset.
-load_all_pretrained_token_embeddings = True
+load_all_pretrained_token_embeddings = False
 
 # If check_for_lowercase is set to True, the lowercased version of each token will also be checked when loading the pretrained embeddings.
 # For example, if the token 'Boston' does not exist in the pretrained embeddings, then it is mapped to the embedding of its lowercased version 'boston',
@@ -138,5 +138,5 @@ reload_crf = True
 #korean
 morpheme_tag_include = True
 space_tag_include = True
-batch_size = 64
+batch_size = 32
 skip_data_compatibility = True
