JARVIS-346 thread queue -> process queue로 변경, lnlstm 적용

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -50,17 +50,20 @@ token_embedding_dimension = 300
 token_lstm_hidden_state_dimension = 100
 
 use_crf = True
-use_bnlstm = False
+# lstm, bnlstm, lnlstm
+lstm_cell_type = lnlstm
 
 [training]
-patience = 10
-maximum_number_of_epochs = 100
+patience = 50
+maximum_number_of_epochs = 500
 
 # optimizer should be either 'sgd', 'adam', or 'adadelta'
 #optimizer = sgd
 #learning_rate = 0.005
 optimizer = adadelta
 learning_rate = 0.9
+#optimizer = adam
+#learning_rate = 1e-4
 # gradients will be clipped above |gradient_clipping_value| and below -|gradient_clipping_value|, if gradient_clipping_value is non-zero
 # (set to 0 to disable gradient clipping)
 gradient_clipping_value = 5.0
@@ -139,4 +142,5 @@ reload_crf = True
 morpheme_tag_include = True
 space_tag_include = True
 batch_size = 32
+limit_word_size = 0
 skip_data_compatibility = True
