--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -43,14 +43,16 @@ character_lstm_hidden_state_dimension = 25
 
 # In order to use random initialization instead, set token_pretrained_embedding_filepath to empty string, as below:
 #token_pretrained_embedding_filepath =
-token_pretrained_embedding_filepath = ../data/morpheme_word_vectors/kor300.txt
+token_pretrained_embedding_filepath = D:\corpus\we\GloVe\v1.0\vectors.txt
+#token_pretrained_embedding_filepath = ../data/morpheme_word_vectors/kor300.txt
 #token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
 # token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
 token_embedding_dimension = 300
 token_lstm_hidden_state_dimension = 100
 
 use_crf = True
-use_bnlstm = False
+# lstm, bnlstm, lnlstm
+lstm_cell_type = lnlstm
 
 [training]
 patience = 10
@@ -104,7 +106,7 @@ remap_unknown_tokens_to_unk = True
 load_only_pretrained_token_embeddings = False
 
 # If load_all_pretrained_token_embeddings is set to True, then all pretrained token embeddings will be loaded even for the tokens that do not appear in the dataset.
-load_all_pretrained_token_embeddings = True
+load_all_pretrained_token_embeddings = False
 
 # If check_for_lowercase is set to True, the lowercased version of each token will also be checked when loading the pretrained embeddings.
 # For example, if the token 'Boston' does not exist in the pretrained embeddings, then it is mapped to the embedding of its lowercased version 'boston',
