JARVIS-226 지명 사전을 이용해서 학습 및 인식하도록 코드 수정

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -13,12 +13,13 @@
 [mode]
 # At least one of use_pretrained_model and train_model must be set to True.
 # train, test, predict, vocab_expansion
-mode = train
+mode = predict
 use_vocab_expansion = False
-pretrained_model_folder = ../trained_models/exobrain
+use_gazetteer = True
+pretrained_model_folder = ../trained_models/exobrain4
 
 [dataset]
-dataset_text_folder = ../data/exobrain3
+dataset_text_folder = ../data/exobrain
 main_evaluation_mode = conll
 
 output_folder = D:\tech\training\ner
