JARVIS-746 attention prediction 코드 오류 수정

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -40,10 +40,10 @@ token_pretrained_embedding_filepath = D:\corpus\we\GloVe\v1.0\vectors.txt
 #token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
 # token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
 token_embedding_dimension = 300
-token_lstm_hidden_state_dimension = 100
+token_lstm_hidden_state_dimension = 100, 50
 
 use_attention = True
-attention_size = 100
+attention_size = 200
 
 use_crf = True
 # lstm, bnlstm, lnlstm
