JARVIS-726 테스트 오류 수정

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -15,7 +15,7 @@
 # train, test, predict, vocab_expansion
 mode = train
 use_vocab_expansion = False
-use_gazetteer = True
+use_gazetteer = False
 pretrained_model_folder = ../trained_models/exobrain3
 
 [dataset]
@@ -40,9 +40,9 @@ token_pretrained_embedding_filepath = D:\corpus\we\GloVe\v1.0\vectors.txt
 #token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
 # token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
 token_embedding_dimension = 300
-token_lstm_hidden_state_dimension = 100, 50
+token_lstm_hidden_state_dimension = 100
 
-use_attention = True
+use_attention = False
 attention_size = 200
 
 use_crf = True
