JARVIS-727 기존에 학습했던 모델과 embedding 크기가 달라졌을때도 로딩할수 있게 코드 수정

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -16,10 +16,11 @@
 mode = train
 use_vocab_expansion = False
 use_gazetteer = False
-pretrained_model_folder = ../trained_models/exobrain3
+pretrained_model_folder = ../trained_models/exobrain
+load_pretrained_model = True
 
 [dataset]
-dataset_text_folder = ../data/exobrain3
+dataset_text_folder = ../data/exobrain5
 main_evaluation_mode = conll
 
 output_folder = D:\tech\training\ner
