--- a/trained_models/exobrain/parameters.ini
+++ b/trained_models/exobrain/parameters.ini
@@ -12,10 +12,11 @@
 
 [mode]
 # At least one of use_pretrained_model and train_model must be set to True.
-# train, predict, expand_predict
+# train, test, predict, vocab_expansion
 mode = train
-use_expanded_embedding = True
-pretrained_model_folder = ../trained_models/exobrain
+use_vocab_expansion = False
+use_gazetteer = False
+pretrained_model_folder = D:\tech\entity\NeuroNER\trained_models\exobrain
 
 [dataset]
 dataset_text_folder = ../data/exobrain3
@@ -41,6 +42,9 @@ token_pretrained_embedding_filepath = D:\corpus\we\GloVe\v1.0\vectors.txt
 token_embedding_dimension = 300
 token_lstm_hidden_state_dimension = 100
 
+use_attention = False
+attention_size = 200
+
 use_crf = True
 # lstm, bnlstm, lnlstm
 lstm_cell_type = lnlstm
@@ -52,8 +56,10 @@ maximum_number_of_steps = 10000000000
 # optimizer should be either 'sgd', 'adam', or 'adadelta'
 #optimizer = sgd
 #learning_rate = 0.005
-optimizer = adadelta
-learning_rate = 0.9
+#optimizer = adadelta
+#learning_rate = 0.9
+optimizer = adam
+learning_rate = 0.001
 # gradients will be clipped above |gradient_clipping_value| and below -|gradient_clipping_value|, if gradient_clipping_value is non-zero
 # (set to 0 to disable gradient clipping)
 gradient_clipping_value = 5.0
@@ -99,6 +105,7 @@ freeze_token_embeddings = False
 plot_format = pdf
 
 #korean
-batch_size = 32
+batch_size = 128
 remap_to_unk_count_threshold = 1
 enable_tensorbord = True
+tokenizer = pos
