JARVIS-727 - 학습 속도 개선 - tensorflow 버전 1.5로 업데이트 되면서 바귄 import 경로 반영 - perl 의존성 제거

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -1,15 +1,3 @@
-
-#----- Possible modes of operation -----------------------------------------------------------------------------------------------------------------#
-# training mode (from scratch): set train_model to True, and use_pretrained_model to False (if training from scratch).                        #
-#				 				Must have train and valid sets in the dataset_text_folder, and test and deployment sets are optional.               #
-# training mode (from pretrained model): set train_model to True, and use_pretrained_model to True (if training from a pretrained model).     #
-#				 						 Must have train and valid sets in the dataset_text_folder, and test and deployment sets are optional.      #
-# prediction mode (using pretrained model): set train_model to False, and use_pretrained_model to True.                                       #
-#											Must have either a test set or a deployment set.                                                        #
-# NOTE: Whenever use_pretrained_model is set to True, pretrained_model_folder must be set to the folder containing the pretrained model to use, and #
-# 		model.ckpt, dataset.pickle and parameters.ini must exist in the same folder as the checkpoint file.                                         #
-#---------------------------------------------------------------------------------------------------------------------------------------------------#
-
 [mode]
 # At least one of use_pretrained_model and train_model must be set to True.
 # train, test, predict, vocab_expansion
@@ -20,7 +8,7 @@ pretrained_model_folder = ../trained_models/exobrain
 load_pretrained_model = True
 
 [dataset]
-dataset_text_folder = ../data/exobrain5
+dataset_text_folder = ../data/exobrain6
 main_evaluation_mode = conll
 
 output_folder = D:\tech\training\ner
@@ -36,7 +24,7 @@ character_lstm_hidden_state_dimension = 25
 
 # In order to use random initialization instead, set token_pretrained_embedding_filepath to empty string, as below:
 #token_pretrained_embedding_filepath =
-token_pretrained_embedding_filepath = D:\corpus\we\GloVe\v1.0\vectors.txt
+token_pretrained_embedding_filepath = E:\corpus\we\GloVe\v1.0\vectors.txt
 #token_pretrained_embedding_filepath = ../data/morpheme_word_vectors/kor300.txt
 #token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
 # token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
@@ -51,7 +39,7 @@ use_crf = True
 lstm_cell_type = lnlstm
 
 [training]
-patience = 10
+patience = 20
 maximum_number_of_steps = 10000000000
 
 # optimizer should be either 'sgd', 'adam', or 'adadelta'
@@ -106,7 +94,7 @@ freeze_token_embeddings = False
 plot_format = pdf
 
 #korean
-batch_size = 128
+batch_size = 100
 remap_to_unk_count_threshold = 1
 enable_tensorbord = True
 tokenizer = pos
