JARVIS-1352 마크다운 매뉴얼 작성 및 코드 정리
- 마크다운 매뉴얼 작성 (user_manual.md)
- 불필요한 파일 정리
- requirements.txt 변경
- neuroner을 kor_neuroner로 이름 변경
- trained_models 폴더와 tools 폴더 삭제
- oktpy 프로젝트 안으로 포함 (2.2.3)

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -8,10 +8,10 @@ pretrained_model_folder = ../trained_models/exobrain
 load_pretrained_model = True
 
 [dataset]
-dataset_text_folder = ../data/exobrain6
+dataset_text_folder = ../data/kor_ner
 main_evaluation_mode = conll
 
-output_folder = D:\tech\training\ner
+output_folder = ../output
 
 #---------------------------------------------------------------------------------------------------------------------#
 # The parameters below are for advanced users. Their default values should yield good performance in most cases.      #
@@ -23,11 +23,7 @@ character_embedding_dimension = 25
 character_lstm_hidden_state_dimension = 25
 
 # In order to use random initialization instead, set token_pretrained_embedding_filepath to empty string, as below:
-#token_pretrained_embedding_filepath =
-token_pretrained_embedding_filepath = E:\corpus\we\GloVe\v1.0\vectors.txt
-#token_pretrained_embedding_filepath = ../data/morpheme_word_vectors/kor300.txt
-#token_pretrained_embedding_filepath = ../data/korean_word_vectors/kor300.txt
-# token_pretrained_embedding_filepath = ../data/word_vectors/glove.6B.100d.txt
+token_pretrained_embedding_filepath =
 token_embedding_dimension = 300
 token_lstm_hidden_state_dimension = 100
 
