JARVIS-1352 oktpy 경로 변경 및 매뉴얼 수정
- oktpy 경로 변경
- 매뉴얼 내용 수정

--- a/src/parameters.ini
+++ b/src/parameters.ini
@@ -5,7 +5,7 @@ mode = train
 use_vocab_expansion = False
 use_gazetteer = False
 pretrained_model_folder = ../trained_models/exobrain
-load_pretrained_model = True
+load_pretrained_model = False
 
 [dataset]
 dataset_text_folder = ../data/kor_ner
